# AES_from_scratch

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  addRoundKey.c  addRoundKey.h  encrypt.c  keySchedule.c  keySchedule.h  main.c  matrix.c  matrix.h  mixColumns.c  mixColumns.h  rCon.c  readme.md  rotWord.c  shiftRows.c  shiftRows.h  subBytes.c  subBytes.h
include/: decryption.h  encrypt.h  keySchedule.h  matrix.h  mixColumns.h  rCon.h  rotWord.h  shiftRows.h  subBytes.h
src/: addRoundKey.c  decryption.c  encrypt.c  keySchedule.c  matrix.c  mixColumns.c  rCon.c  rotWord.c  shiftRows.c  subBytes.c
tests/: test.py
